NAT-210: add unhappy path and legacy ID cases for looking up a LCA
